jscomp/syntax/tests/parsing/errors/expressions/unexpectedConstraint.res
let x = {
  let a = 1
  let b = 2
  a + b : int
}

let x = "hi": string 
